hardwaretypes becomes devicetypes to align with netbox terminology and additional yaml files and changes to existing ones support the refactor changes.
Signed-off-by: Jacob Salmela <jacob.salmela@hpe.com>

--- a/pkg/devicetypes/device-types/HPE/Apollo-35.yaml
+++ b/pkg/devicetypes/device-types/HPE/Apollo-35.yaml
@@ -25,6 +25,7 @@
 manufacturer: HPE
 model: HPE Apollo 35 System
 slug: hpe-apollo-35-system
+hardware-type: NodeBlade
 u_height: 2
 is_full_depth: true
 console-ports:
