--- a/pkg/devicetypes/device-types/HPE/Aruba-6300M-48G.yaml
+++ b/pkg/devicetypes/device-types/HPE/Aruba-6300M-48G.yaml
@@ -24,7 +24,8 @@
 ---
 manufacturer: HPE
 model: HPE Aruba Networking CX 6300M 48G Power-to-Port Airflow 2 Fans 1 Power Supply Unit Bundle
-slug: hpe-aruba-6300m-48g
+slug: hpe-aruba-networking-cx-6300m-48g-power-to-port-airflow-2-fans-1-power-supply-unit-bundle
+hardware-type: ManagementSwitch
 part_number: R9F63A
 u_height: 1
 is_full_depth: false
